// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManagementConsoleRoutes tests Test Jobs management route 1`] = `
<ManagementConsoleRoutes>
  <Switch>
    <Route
      component={[Function]}
      computedMatch={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/ProcessInstances",
          "url": "/ProcessInstances",
        }
      }
      exact={true}
      location={
        Object {
          "hash": "",
          "pathname": "/ProcessInstances",
          "search": "",
          "state": undefined,
        }
      }
      path="/ProcessInstances"
    >
      <MockedProcessListPage
        history={
          Object {
            "action": "REPLACE",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "/ProcessInstances",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/ProcessInstances",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "/ProcessInstances",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/ProcessInstances",
            "url": "/ProcessInstances",
          }
        }
      />
    </Route>
  </Switch>
</ManagementConsoleRoutes>
`;

exports[`ManagementConsoleRoutes tests Test NoData route 1`] = `
<ManagementConsoleRoutes>
  <Switch>
    <Route
      computedMatch={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/NoData",
          "url": "/NoData",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/NoData",
          "search": "",
          "state": undefined,
        }
      }
      path="/NoData"
      render={[Function]}
    >
      <NoData
        defaultButton="Go to jobs management"
        defaultPath="/JobsManagement"
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "/NoData",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/NoData",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "/NoData",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/NoData",
            "url": "/NoData",
          }
        }
      >
        <MockedComponent />
      </NoData>
    </Route>
  </Switch>
</ManagementConsoleRoutes>
`;

exports[`ManagementConsoleRoutes tests Test PageNotFound route 1`] = `
<ManagementConsoleRoutes>
  <Switch>
    <Route
      computedMatch={
        Object {
          "isExact": true,
          "params": Object {
            "0": "*",
          },
          "path": "*",
          "url": "*",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "*",
          "search": "",
          "state": undefined,
        }
      }
      path="*"
      render={[Function]}
    >
      <PageNotFound
        defaultButton="Go to jobs management"
        defaultPath="/JobsManagement"
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "*",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "*",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "*",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {
              "0": "*",
            },
            "path": "*",
            "url": "*",
          }
        }
      >
        <MockedComponent />
      </PageNotFound>
    </Route>
  </Switch>
</ManagementConsoleRoutes>
`;

exports[`ManagementConsoleRoutes tests jobs management page test 1`] = `
<ManagementConsoleRoutes>
  <Switch>
    <Route
      component={[Function]}
      computedMatch={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/JobsManagement",
          "url": "/JobsManagement",
        }
      }
      exact={true}
      location={
        Object {
          "hash": "",
          "pathname": "/JobsManagement",
          "search": "",
          "state": undefined,
        }
      }
      path="/JobsManagement"
    >
      <MockedJobsManagementPage
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "/JobsManagement",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/JobsManagement",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "/JobsManagement",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/JobsManagement",
            "url": "/JobsManagement",
          }
        }
      />
    </Route>
  </Switch>
</ManagementConsoleRoutes>
`;

exports[`ManagementConsoleRoutes tests no data page test 1`] = `
<ManagementConsoleRoutes>
  <Switch>
    <Route
      computedMatch={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/NoData",
          "url": "/NoData",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/NoData",
          "search": "",
          "state": undefined,
        }
      }
      path="/NoData"
      render={[Function]}
    >
      <NoData
        defaultButton="Go to jobs management"
        defaultPath="/JobsManagement"
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "/NoData",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/NoData",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "/NoData",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/NoData",
            "url": "/NoData",
          }
        }
      >
        <MockedComponent />
      </NoData>
    </Route>
  </Switch>
</ManagementConsoleRoutes>
`;

exports[`ManagementConsoleRoutes tests page not found page test 1`] = `
<ManagementConsoleRoutes>
  <Switch>
    <Route
      computedMatch={
        Object {
          "isExact": true,
          "params": Object {
            "0": "*",
          },
          "path": "*",
          "url": "*",
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "*",
          "search": "",
          "state": undefined,
        }
      }
      path="*"
      render={[Function]}
    >
      <PageNotFound
        defaultButton="Go to jobs management"
        defaultPath="/JobsManagement"
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "*",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "*",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "*",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {
              "0": "*",
            },
            "path": "*",
            "url": "*",
          }
        }
      >
        <MockedComponent />
      </PageNotFound>
    </Route>
  </Switch>
</ManagementConsoleRoutes>
`;

exports[`ManagementConsoleRoutes tests process list test 1`] = `
<ManagementConsoleRoutes>
  <Switch>
    <Route
      component={[Function]}
      computedMatch={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/ProcessInstances",
          "url": "/ProcessInstances",
        }
      }
      exact={true}
      location={
        Object {
          "hash": "",
          "pathname": "/ProcessInstances",
          "search": "",
          "state": undefined,
        }
      }
      path="/ProcessInstances"
    >
      <MockedProcessListPage
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "/ProcessInstances",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/ProcessInstances",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "/ProcessInstances",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/ProcessInstances",
            "url": "/ProcessInstances",
          }
        }
      />
    </Route>
  </Switch>
</ManagementConsoleRoutes>
`;
